// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterWallets should render 1`] = `
<div>
  <div
    class="flex flex-col text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="font-semibold text-theme-neutral-dark"
      >
        Filter Network
      </div>
      <div
        class="mt-1 text-sm text-theme-neutral"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      />
      <div
        class="sc-AxhCb iZzMIT relative cursor-pointer border-theme-primary-contrast"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxjAm iepfoc"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Your Wallets
        </div>
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="flex items-center justify-end cursor-pointer text-theme-neutral-dark"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="inline-block mr-2 font-semibold"
            >
              All
            </span>
            <div
              class="sc-AxjAm HWmvM"
              height="12"
              width="12"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        Select the display of your wallets
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-col mb-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Portfolio Chart
        </div>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-qyyifx-0 bXkHfF"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-qyyifx-1 jXkMFJ"
          >
            <span
              class="Toggle__HandleInner-qyyifx-2 chnbkf"
            />
          </div>
        </label>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        You can hide this unit if you like
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Transaction History
        </div>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-qyyifx-0 bXkHfF"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-qyyifx-1 jXkMFJ"
          >
            <span
              class="Toggle__HandleInner-qyyifx-2 chnbkf"
            />
          </div>
        </label>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        You can hide this unit if you like
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets should render with networks selection 1`] = `
<div>
  <div
    class="flex flex-col text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="font-semibold text-theme-neutral-dark"
      >
        Filter Network
      </div>
      <div
        class="mt-1 text-sm text-theme-neutral"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--0"
        >
          <div
            class="sc-AxhCb iZzMIT relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            />
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--1"
        >
          <div
            class="sc-AxhCb iZzMIT relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            />
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--2"
        >
          <div
            class="sc-AxhCb iZzMIT relative border-theme-neutral-200 text-theme-neutral-300"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            />
            <span
              class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-200"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
      <div
        class="sc-AxhCb iZzMIT relative cursor-pointer border-theme-primary-contrast"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw hKaGKG flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-contrast text-theme-primary-500"
        >
          <div
            class="sc-AxjAm iepfoc"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Your Wallets
        </div>
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="flex items-center justify-end cursor-pointer text-theme-neutral-dark"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="inline-block mr-2 font-semibold"
            >
              All
            </span>
            <div
              class="sc-AxjAm HWmvM"
              height="12"
              width="12"
            >
              <svg>
                chevron-down.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        Select the display of your wallets
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-col mb-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Portfolio Chart
        </div>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-qyyifx-0 bXkHfF"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-qyyifx-1 jXkMFJ"
          >
            <span
              class="Toggle__HandleInner-qyyifx-2 chnbkf"
            />
          </div>
        </label>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        You can hide this unit if you like
      </div>
    </div>
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div
          class="font-semibold text-theme-neutral-dark"
        >
          Transaction History
        </div>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-qyyifx-0 bXkHfF"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-qyyifx-1 jXkMFJ"
          >
            <span
              class="Toggle__HandleInner-qyyifx-2 chnbkf"
            />
          </div>
        </label>
      </div>
      <div
        class="pr-12 mt-1 text-sm text-theme-neutral"
      >
        You can hide this unit if you like
      </div>
    </div>
  </div>
</div>
`;
